--- a/graph_builder/index.html
+++ b/graph_builder/index.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:xlink = "http://www.w3.org/1999/xlink">
   <head>
   <script type="text/javascript" src="./d3.min.js"></script> 
   <script type="text/javascript" src="./jquery-2.2.0.min.js"></script>
